@@ -977,8 +977,8 @@ class InternalServerErrorTests(object):
     def tearDown(self):
         self.stop_subprocess()
 
-    def test_before_start_response(self):
-        to_send = "GET /before_start_response HTTP/1.1\n\n"
+    def test_before_start_response_http_10(self):
+        to_send = "GET /before_start_response HTTP/1.0\n\n"
         to_send = tobytes(to_send)
         self.connect()
         self.sock.send(to_send)
@@ -992,8 +992,23 @@ class InternalServerErrorTests(object):
         self.send_check_error(to_send)
         self.assertRaises(ConnectionClosed, read_http, fp)
 
-    def test_after_start_response(self):
-        to_send = "GET /after_start_response HTTP/1.1\n\n"
+    def test_before_start_response_http_11(self):
+        to_send = "GET /before_start_response HTTP/1.1\n\n"
+        to_send = tobytes(to_send)
+        self.connect()
+        self.sock.send(to_send)
+        fp = self.sock.makefile('rb', 0)
+        line, headers, response_body = read_http(fp)
+        self.assertline(line, '500', 'Internal Server Error', 'HTTP/1.1')
+        cl = int(headers['content-length'])
+        self.assertEqual(cl, len(response_body))
+        self.assertTrue(response_body.startswith(b'Internal Server Error'))
+        # connection has been closed
+        self.send_check_error(to_send)
+        self.assertRaises(ConnectionClosed, read_http, fp)
+
+    def test_after_start_response_http10(self):
+        to_send = "GET /after_start_response HTTP/1.0\n\n"
         to_send = tobytes(to_send)
         self.connect()
         self.sock.send(to_send)
@@ -1006,6 +1021,22 @@ class InternalServerErrorTests(object):
         # connection has been closed
         self.send_check_error(to_send)
         self.assertRaises(ConnectionClosed, read_http, fp)
+        
+    def test_after_start_response_http11(self):
+        to_send = "GET /after_start_response HTTP/1.1\n\n"
+        to_send = tobytes(to_send)
+        self.connect()
+        self.sock.send(to_send)
+        fp = self.sock.makefile('rb', 0)
+        line, headers, response_body = read_http(fp)
+        self.assertline(line, '500', 'Internal Server Error', 'HTTP/1.1')
+        cl = int(headers['content-length'])
+        self.assertEqual(cl, len(response_body))
+        self.assertTrue(response_body.startswith(b'Internal Server Error'))
+        # connection has been closed
+        self.send_check_error(to_send)
+        self.assertRaises(ConnectionClosed, read_http, fp)
+
 
     def test_after_write_cb(self):
         to_send = "GET /after_write_cb HTTP/1.1\n\n"
