@@ -1,3 +1,9 @@
+Next release
+------------
+
+- The HTTP version of the response returned by waitress when it catches an
+  exception will now match the HTTP request version.
+
 0.8.6 (2013-08-12)
 ------------------
 
